src/test/resources/rules/success/TypeName.java
package rules.success;

public class TypeName {
    public static void main(String[] args) {}

    class GoodClassName {
    }
}