src/test/resources/rules/fail/TypeName.java
package rules.fail;

public class TypeName {
    public static void main(String[] args) {}

    class bad_class_name {
    }
}